fixed style for sizeboxify year chart label overflowing

--- a/demo/src/stylesheets/size-boxify.demo.scss
+++ b/demo/src/stylesheets/size-boxify.demo.scss
@@ -77,6 +77,10 @@ div.dc-chart {
 		height: 80%;
 		position: absolute;
 		bottom: 0px;
+
+		svg {
+			padding-left: 10px;
+		}
 	}
 }
 
